--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_secure_storage: ^9.0.0
   kakao_flutter_sdk_user: ^1.6.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
