--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,3 +28,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: CustomIcons
+      fonts:
+        - asset: fonts/CustomIcons.ttf
