--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   kakao_flutter_sdk_user: ^1.6.0
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.8
+  easy_rich_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
